# scrap-hardware-lab

./: .gitattributes  .gitignore  Cargo.toml  README.md  pyproject.toml
_ref/scrap-master/scrap-master/: .gitignore  COFOUNDER.md  Cargo.toml  DIU_643.md  HARDWARE.md  README.md  TRL4_DEMO.md
_ref/scrap-master/scrap-master/future/: AGS.md  AUCTION.md  CHANNELS.md
_ref/scrap-master/scrap-master/presentations/: .htpasswd  Makefile  _theme.css  build-investor.py  mermaid-init.js  serve.py
_ref/scrap-master/scrap-master/presentations/cofounder/: cta.md  funding.md  opportunity.md  path.md  role.md  sdvosb.md  status.md
_ref/scrap-master/scrap-master/presentations/commercial/: business_model.md  cta.md  market.md
_ref/scrap-master/scrap-master/presentations/common/: architecture.md  delegation.md  demo.md  implementation.md  payment.md  problem.md  risks.md  roadmap.md  scrap.md  security.md  sisl.md  summary.md  team.md  title.md  vision.md
_ref/scrap-master/scrap-master/presentations/darpa/: contested_env.md  cta.md
_ref/scrap-master/scrap-master/presentations/nasa/: ccsds_alignment.md  cta.md  trl_progression.md
_ref/scrap-master/scrap-master/presentations/stories/: agricultural_multihop.md  debris_inspection.md  disaster_response.md  geo_relay_earthquake.md  gnss_hurricane.md  lidar_volcanic_ash.md  maritime_sar.md  methane_detection.md  orbital_data_center.md  satellite_servicing.md  ship_tracking_ais.md  wildfire_hyperspectral.md
_ref/scrap-master/scrap-master/research/: CNC_RESEARCH.md  PAYMENT_RESEARCH.md
_ref/scrap-master/scrap-master/scap-core/: Cargo.toml
_ref/scrap-master/scrap-master/scap-core/src/: cbor.rs  crypto.rs  error.rs  lib.rs  token.rs  types.rs
_ref/scrap-master/scrap-master/scap-core/tests/: integration.rs  test_vectors.rs
_ref/scrap-master/scrap-master/scap-ffi/: Cargo.toml
_ref/scrap-master/scrap-master/scap-ffi/examples/: example  example.c
_ref/scrap-master/scrap-master/scap-ffi/include/: scap.h
_ref/scrap-master/scrap-master/scap-ffi/src/: lib.rs
_ref/scrap-master/scrap-master/scap-lightning/: Cargo.toml
_ref/scrap-master/scrap-master/scap-lightning/src/: binding.rs  broadcaster.rs  channel.rs  config.rs  fee_estimator.rs  lib.rs  logger.rs  payment.rs  persister.rs
_ref/scrap-master/scrap-master/schemas/: README.md  scap.cddl  validate_examples.py
_ref/scrap-master/scrap-master/schemas/examples/: bound_task_request.cbor  bound_task_request.json  capability_token.cbor  capability_token.json  delegation_token.cbor  delegation_token.json  dispute_message.cbor  dispute_message.json  execution_proof.cbor  execution_proof.json  heartbeat.cbor  heartbeat.json  isl_tasklib_message.cbor  isl_tasklib_message.json  lightning_wrapper.cbor  task_accepted.cbor  task_completed.cbor  task_failed.cbor  task_rejected.cbor
_ref/scrap-master/scrap-master/scripts/: cross-build.sh
_ref/scrap-master/scrap-master/spec/: ADVERSARIAL.md  BIP-SCRAP.md  HTLC-FALLBACK.md  HTLC.md  OPERATOR_API.md  PTLC-FALLBACK.md  SCRAP.md  SISL.md  SM.md
_ref/scrap-master/scrap-master/strategy/: ACADEMIC.md  FUNDING.md  REGULATORY.md  ROADMAP.md  STANDARDIZATION.md  TRL.md
_ref/scrap-master/scrap-master/test-vectors/: computed.json  generate.py  verify.py
_ref/scrap-master/scrap-master/user_stories/: 01_emergency_maritime_sar.md  02_wildfire_hyperspectral.md  03_agricultural_multihop.md  04_lidar_cross_operator.md  05_ship_tracking_ais.md  06_methane_auction.md  07_gnss_radio_occultation.md  08_geo_relay_imaging.md  09_debris_inspection_rpo.md  10_satellite_servicing_rpo.md  11_disaster_response_multi_constellation.md  12_orbital_data_center.md
bins/scrap-orchestrator/: Cargo.toml
bins/scrap-orchestrator/src/: main.rs
demo/: run_demo.sh
docs/: 03-run-demo.md  06-bringup.md  07-hardware-lab-mode.md
inventory/: devices.yaml  routes.json  (+2 more)
rust/scrap-protocol/: Cargo.toml
rust/scrap-protocol/src/: demo.rs  lib.rs  spec.rs  spec_cbor.rs  tlv.rs  traits.rs
(+75 files in other folders)
