[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "scrap-demo"
version = "0.1.0"
requires-python = ">=3.10"

[project.scripts]
scrap-executor = "src.node.executor:main"
scrap-commander = "src.node.commander:main"
scrap-operator = "src.controller.operator_stub:main"