[package]
name = "scrap-orchestrator"
version = "0.1.0"
edition = "2021"

[dependencies]
clap = { version = "4.5", features = ["derive"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
sha2 = "0.10"
scrap-core-lite = { path = "../../crates/scrap-core-lite" }
scrap-linux-udp = { path = "../../crates/scrap-linux-udp" }
