[package]
name = "scrap-protocol"
version = "0.1.0"
edition = "2021"

[dependencies]
rand = "0.8"
secp256k1 = { version = "0.28", features = ["rand-std"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
sha2 = "0.10"
minicbor = { version = "0.20", default-features = false, features = ["alloc"] }
