[package]
name = "scap-core"
version = "0.1.0"
edition = "2021"
description = "SCAP (Satellite Capability and Payment) protocol implementation"
license = "MIT"
repository = "https://github.com/dysonlabs/scap"

[features]
default = ["std"]
std = ["ciborium/std", "secp256k1/std", "sha2/std"]

[dependencies]
# CBOR serialization (no_std compatible)
ciborium = { version = "0.2", default-features = false }

# secp256k1 for signing/verification
secp256k1 = { version = "0.29", default-features = false, features = ["alloc"] }

# Serde for derive macros
serde = { version = "1.0", default-features = false, features = ["derive", "alloc"] }

# SHA256 hashing
sha2 = { version = "0.10", default-features = false }

# Hex encoding for test vectors
hex = { version = "0.4", default-features = false, features = ["alloc"] }

[dev-dependencies]
# For loading test vectors
serde_json = "1.0"
