[package]
name = "scap-lightning"
version = "0.1.0"
edition = "2021"
description = "LDK integration for SCAP satellite payments"
license = "MIT"

[features]
default = ["std"]
std = ["lightning/std", "lightning-invoice/std"]

[dependencies]
# SCAP core types
scap-core = { path = "../scap-core" }

# LDK components
lightning = { version = "0.0.125", default-features = false, features = ["std"] }
lightning-invoice = { version = "0.32", default-features = false, features = ["std"] }

# Bitcoin primitives
bitcoin = { version = "0.32", default-features = false, features = ["std"] }

# Async runtime (optional, for background processing)
tokio = { version = "1", features = ["sync", "time"], optional = true }

# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

# Hex encoding
hex = "0.4"

# Logging
log = "0.4"

[dev-dependencies]
tokio = { version = "1", features = ["full"] }
